--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,12 +2,12 @@
   .side-bar__user-name
     .top-items
       .top-items__name
-        sarina
+        = current_user.name
       .top-items__icons
-        = link_to "#" do
+        = link_to do
           %i.fa.fa-edit
           %span<>
-        = link_to "#" do
+        = link_to edit_user_path(current_user) do
           %i.fa.fa-cog
           %span<>
   %ul.side-bar__group-list
