--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,25 +4,16 @@
       .top-items__name
         = current_user.name
       .top-items__icons
-        = link_to do
+        = link_to new_group_path do
           %i.fa.fa-edit
           %span<>
         = link_to edit_user_path(current_user) do
           %i.fa.fa-cog
           %span<>
-  %ul.side-bar__group-list
-    %li.group
-      .group__name
-        techcamp
-      .group__message
-        まだメッセージがありません
-    %li.group
-      .group__name
-        techcamp2
-      .group__message
-        まだメッセージがありません
-    %li.group
-      .group__name
-        techcamp3
-      .group__message
-        まだメッセージがありません
+  .side-bar__group-list
+    - current_user.groups.each do |group|
+      .group
+        .group__name
+          = group.name
+        .group__message
+          まだメッセージがありません
