メッセージ送信機能実装

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -152,13 +152,10 @@
         right: 49px;
         font-size: 1.3rem;
         height: 100%;
-        .fa-image :before{
-          content: "\f03e"
-        }
-        .fa-image{
+        .icon{
           color: black;
         }
-        &--file {
+        .hidden {
           display: none;
         }
       }
