--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -24,14 +24,17 @@
     .group {
       padding: 20px 0px 40px 0px;
       margin: 0px 20px;
-      color: $side-fontcolor;
       font-weight: bold;
-      &__name {
-        font-size: 15px;
-        padding-bottom: 5px;
-      }
-      &__message {
-        font-size: 11px;
+      .group-link {
+        text-decoration: none;
+        color: $side-fontcolor;
+        &__name {
+          font-size: 15px;
+          padding-bottom: 5px;
+        }
+        &__message {
+          font-size: 11px;
+        }
       }
     }
   }
@@ -79,9 +82,14 @@
         font-size: 20px;
         padding: 35px 0px 15px 0px;
       }
-      &--member {
+      &--members {
         color: #999999;
         font-size: 12px;
+        display: flex;
+        .member {
+          display: flex;
+          padding-right: 5px;
+        }
       }
     }
     .group-info__right {
@@ -135,11 +143,15 @@
     .input-box {
       height: 50px;
       line-height: 90px;
-      padding-right: 15px;
       display: flex;
       width: calc(100% - 100px);
-      position: relative;
       margin: auto;
+      padding-right: 15px;
+      .new_message {
+        position: relative;
+        display: flex;
+        width: 100%;
+      }
       &__text {
         width: calc(100% - 1.3rem);
         padding-left: 10px;
@@ -148,8 +160,9 @@
       }
       &__img {
         position: absolute;
+        right: 131px;
         top: -19px;
-        right: 49px;
+        height: 50px;
         font-size: 1.3rem;
         height: 100%;
         .icon{
@@ -168,6 +181,7 @@
       background-color: #38aef0;
       color: white;
       cursor: pointer;
+      margin-left: 15px;
     }
   }
 }
