--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -14,7 +14,8 @@
       = link_to edit_group_path(@group), class: "edit-btn" do
         Edit
   .main-chat__message-list
-    = render @messages
+    .messages
+      = render @messages
   .main-chat__message-form
     .input-box
       = form_for [@group, @message] do |f|
